# mazos-ui

./: .gitignore  .gitmodules  .vercelignore  ACTIVE_PROJECT_NOTES.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LOOP.md  MAZOS_AI_FEED_REPORT.md  MAZOS_AI_FEED_RESEARCH_PROMPT.md  MAZOS_LOOP_FACTORY_REPORT.md  MAZOS_NEXT_STAGE_BUILD_PROMPT_SHEET.txt  MAZOS_NEXT_STAGE_LOOP_REPORT.md  README.md  STATE.md  install.ps1  loop-budget.md  loop-run-log.md  next.config.desktop.mjs  next.config.server.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: auto-merge.yml  ci.yml  desktop-contract.yml  tauri-build.yml
.ralph/: CLAUDE.md  STATE.md  prd.json
config/: agent-runtimes.json  agents.json  buttons.json  control-panel.yaml  external-agent-sources.json  tracked-repos.json  workspaces.example.json
docs/: MAZOS_DESIGN_DIRECTION.md  MAZOS_MARKET_BREAKER_ROADMAP.md  OPENWIKI_LOCAL_INSTALL.md
research/: cli-features-research.md
scripts/: audit-desktop-runtime.mjs  build-desktop.mjs  mazos-local-bridge.mjs  mazos-publish-remote-snapshot.mjs  register-triage-task.ps1  run-morning-triage.ps1  run-tests.mjs  smoke-desktop-backend.mjs  start-mazos-local-stack.ps1
specs/: ai-intelligence-engine.md  declutter-one-verdict.md  mazos-ai-feed.md  mazos-light-redesign.md  mazos-next-stage.md  mazos-ui-declutter.md  radar-to-loop.md
src/: proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/server/: .gitkeep
src-tauri/src/: commands.rs  lib.rs
src/app/: globals.css  (+2 more)
tests/: aiIntelligence.test.ts  loopFactory.test.ts
(+140 files in other folders)
