[package]
name = "app"
version = "0.1.0"
description = "MAZos desktop shell"
authors = ["Maz"]
license = ""
repository = "https://github.com/manazoid4/mazos-ui"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
